# myboard

./: README.md  config.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 576d15b9d674_init_migration.py  722ca1b66f5f_new_migration.py
app/: main.py
app/api/v1/: boards.py  service.py  tasks.py  users.py
app/core/: config.py  security.py
app/db/: database.py  session.py
app/models/: board.py  task.py  user.py
app/schemas/: board.py  task.py  user.py
app/services/: board.py  task.py  user.py
bot/: main.py
bot/auth/: handlers.py  session.py  states.py
bot/handlers/: boards.py  tasks.py
bot/keyboards/: task_keyboards.py
bot/tasks/: states.py
tests/: conftest.py  test_boards.py  test_users.py
